[package]

name = "drossel"
version = "0.1.0"
authors = [ "florian.gilcher@asquera.de" ]

[dependencies.strand]

#git = "https://github.com/skade/strand.git"
git = "file:///Users/skade/Code/rust/strain"

#[dependencies.leveldb]
#
#git = "https://github.com/skade/leveldb.git"

[[lib]]

name = "drossel"

#[[bin]]
#
#name = "drossel-server"
